home page- and hovers are ready

--- a/home.html
+++ b/home.html
@@ -137,12 +137,10 @@
                             <span class="caption-contain">
                                 and free ship order <br>over $100
                             </span>
-                            <a class=" shop shop-click">SHOP NOW
+                            <a class=" shop btn-hover">SHOP NOW
                                 <i class="fa-solid fa-arrow-right-long"></i>
                             </a>
-                            <a class="shop">SHOP NOW
-                                <i class="fa-solid fa-arrow-right-long"></i>
-                            </a>
+                          
                         </div>
                     </div>
                     <div class="swiper-slide">
@@ -153,7 +151,7 @@
                             <span class="caption-contain">
                                 and free ship order <br>over $100
                             </span>
-                            <a class="shop">SHOP NOW
+                            <a class="shop btn-hover">SHOP NOW
                                 <i class="fa-solid fa-arrow-right-long"></i>
                             </a>
                         </div>
@@ -168,7 +166,7 @@
                             <span class="caption-contain">
                                 and free ship order <br>over $100
                             </span>
-                            <a class="shop">SHOP NOW
+                            <a class="shop btn-hover">SHOP NOW
                                 <i class="fa-solid fa-arrow-right-long"></i>
                             </a>
                         </div>
@@ -193,7 +191,7 @@
                             <img src="./assets/images/image-1.jpg" alt="">
                         </div>
                         <div class="apImage">
-                            <img src="./assets/images/wedding.png" alt="">
+                            <img class="rot" src="./assets/images/wedding.png" alt="">
 
                         </div>
                     </div>
@@ -242,7 +240,7 @@
                             <div class="product-img">
                                 <a>
                                     <img src="./assets/images/dress1.jpg" class="primary-img" alt="Card image cap">
-                                    <img src="./assets/images/dresss1.jpg" class="secondary-img d-none"
+                                    <img src="./assets/images/dresss1.jpg" class="secondary-img"
                                         alt="Card image cap">
                                 </a>
                             </div>
@@ -261,7 +259,7 @@
                             <div class="product-img">
                                 <a>
                                     <img src="./assets/images/dress2.jpg" class="primary-img" alt="Card image cap">
-                                    <img src="./assets/images/dresss2.jpg" class="secondary-img d-none"
+                                    <img src="./assets/images/dresss2.jpg" class="secondary-img"
                                         alt="Card image cap">
                                 </a>
                             </div>
@@ -280,7 +278,7 @@
                             <div class="product-img">
                                 <a>
                                     <img src="./assets/images/dress3.jpg" class="primary-img" alt="Card image cap">
-                                    <img src="./assets/images/dresss3.jpg" class="secondary-img d-none"
+                                    <img src="./assets/images/dresss3.jpg" class="secondary-img"
                                         alt="Card image cap">
                                 </a>
                             </div>
@@ -299,7 +297,7 @@
                             <div class="product-img">
                                 <a>
                                     <img src="./assets/images/dress4.jfif" class="primary-img" alt="Card image cap">
-                                    <img src="./assets/images/dresss4.jfif" class="secondary-img d-none"
+                                    <img src="./assets/images/dresss4.jfif" class="secondary-img"
                                         alt="Card image cap">
                                 </a>
                             </div>
@@ -318,7 +316,7 @@
                             <div class="product-img">
                                 <a>
                                     <img src="./assets/images/dresss5.jpg" class="primary-img" alt="Card image cap">
-                                    <img src="./assets/images/dress5.jpg" class="secondary-img d-none"
+                                    <img src="./assets/images/dress5.jpg" class="secondary-img"
                                         alt="Card image cap">
                                 </a>
                             </div>
@@ -337,7 +335,7 @@
                             <div class="product-img">
                                 <a>
                                     <img src="./assets/images/dress7.jpeg" class="primary-img" alt="Card image cap">
-                                    <img src="./assets/images/dresss7.jpeg" class="secondary-img d-none"
+                                    <img src="./assets/images/dresss7.jpeg" class="secondary-img"
                                         alt="Card image cap">
                                 </a>
                             </div>
@@ -356,7 +354,7 @@
                             <div class="product-img">
                                 <a>
                                     <img src="./assets/images/dress6.jfif" class="primary-img" alt="Card image cap">
-                                    <img src="./assets/images/dresss6.jfif" class="secondary-img d-none"
+                                    <img src="./assets/images/dresss6.jfif" class="secondary-img"
                                         alt="Card image cap">
                                 </a>
                             </div>
@@ -375,7 +373,7 @@
                             <div class="product-img">
                                 <a>
                                     <img src="./assets/images/dress8.jpg" class="primary-img" alt="Card image cap">
-                                    <img src="./assets/images/dresss8.jpg" class="secondary-img d-none"
+                                    <img src="./assets/images/dresss8.jpg" class="secondary-img"
                                         alt="Card image cap">
                                 </a>
                             </div>
@@ -699,8 +697,10 @@
                     <div class="col-8">
                         <div class="block-content">
                             <form>
-                                <input placeholder="Your email address">
-                                <button type="submit"></button>
+                                <div class="input-area">
+                                    <input placeholder="Your email address">
+                                </div>
+                                <button type="submit">SUBSCRIBE</button>
                             </form>
                         </div>
                     </div>
@@ -709,6 +709,123 @@
 
 
 
+        </section>
+        <section id="footer-top">
+            <div class="container">
+                <div class="row">
+                    <div class="col-3">
+                        <div class="service-item">
+                            <img src="./assets/images/service-1.png">
+                            <span class="title">Free Shipping </span>
+                            <p>Once receiving your order, we will turn your products around in 3- 5 business days.</p>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="service-item">
+                            <img src="./assets/images/service-2.png">
+                            <span class="title">Free Shipping </span>
+                            <p>We accept returns for freshly purchased products within 7 days from the payment.</p>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="service-item">
+                            <img src="./assets/images/service-3.png">
+                            <span class="title">Custom Sizing</span>
+                            <p>Order your dress with free custom sizing.</p>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="service-item">
+                            <img src="./assets/images/service-4.png">
+                            <span class="title">Superb Quality</span>
+                            <p>We make commitments that the quality of our products will and always will be superb.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-2">
+                                <div class="ApColumn ">
+                                    <div class="block ApLink ApBlockLink">
+                                        <ul>
+                                            <li><a href="blog.html" target="_self">Blog </a></li>
+                                            <li><a href="https://demo73.leotheme.com/prestashop/leo_bridey_demo/en/content/4-about-us"
+                                                    target="_self">About Us </a></li>
+                                            <li><a href="#" target="_self">Careers</a></li>
+                                            <li><a href="#" target="_self"> Partner</a></li>
+                                        </ul>
+                                    </div>
+
+                                </div>
+
+                            </div>
+                            <div class="col-2">
+                                <div class="ApColumn ">
+
+                                    <div class="block ApLink ApBlockLink">
+                                        <ul>
+                                            <li><a href="#" target="_self">Size chart</a></li>
+                                            <li><a href="https://demo73.leotheme.com/prestashop/leo_bridey_demo/en/guest-tracking"
+                                                    target="_self"> Track order </a></li>
+                                            <li><a href="#" target="_self">Dress Guide </a></li>
+                                            <li><a href="https://demo73.leotheme.com/prestashop/leo_bridey_demo/en/content/1-delivery"
+                                                    target="_self">Shipping </a></li>
+                                            <li><a href="https://demo73.leotheme.com/prestashop/leo_bridey_demo/en/content/5-secure-payment"
+                                                    target="_self">Payment Methods</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="logo">
+                                    <img src="./assets/images/bridey-logo.jpg">
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="block-information">
+                                    <h4 class="title_block">Showroom</h4>
+                                    <p>Box 565, Charlestown, Nevis, West Indies,Caribbean</p>
+                                    <ul>
+                                        <li>Monday - Friday: <span>8am - 4pm </span></li>
+                                        <li>Saturday: <span>9am - 5pm</span></li>
+                                    </ul>
+                                </div>
+                                <div class="block-social">
+                                    <h6 class="title_block">
+                                        Follow us
+                                    </h6>
+                                    <ul>
+                                        <li class="facebook"><a href="#" title="Facebook" target="_blank"
+                                                rel="noopener noreferrer"><i class="fa-brands fa-facebook-f"></i></a>
+                                        </li>
+                                        <li class="twitter"><a href="#" title="Twitter" target="_blank"
+                                                rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a></li>
+                                        <li class="pinterest"><a href="#" title="Pinterest" target="_blank"
+                                                rel="noopener noreferrer"><i class="fa-brands fa-pinterest"></i></a>
+                                        </li>
+                                        <li class="instagram"><a href="#" title="Instagram" target="_blank"
+                                                rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+                                        </li>
+                                    </ul>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <hr>
+        <section id="footer-bottom">
+            <div class="container">
+                <div class="block-copyright ApRawHtml">
+                    Copyright © 2020 All Rights Reserved. <span>Bridey.</span> </div>
+            </div>
         </section>
     </main>
 </body>
