--- a/home.html
+++ b/home.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.3.1/mdb.min.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Qwitcher+Grypen&display=swap" rel="stylesheet">
     <link
@@ -31,34 +32,36 @@
     <header>
         <section id="nav-up">
             <div class="nav-container">
-                <!-- <div class="language-selector">
-                    <span>English</span>
-                    <i class="fa-solid fa-chevron-down"></i>
-                    <div class="language-dropdown">
-                        <ul class="dropdown-menu">
-                            <li class="current">
-                                <img class="current-img" src="./assets/images/current-1.svg">
-                                <span>English</span>
-                            </li>
-                            <li class="current">
-                                <img src="./assets/images/current-3.svg">
-                                <span></span>
-                            </li>
-                            <li class="current">
-                                <img src="./assets/images/current-4.svg">
-                                <span></span>
-                            </li>
-                            <li class="current">
-                                <img src="./assets/images/current-1.svg">
-                                <span></span>
-                            </li>
-                            <li class="current">
-                                <img src="./assets/images/current-1.svg">
-                                <span></span>
-                            </li>
-                        </ul>
-                    </div>
-                </div> -->
+                <div class="dropdown">
+                    <a class="dropdown-toggle" href="#" id="Dropdown" role="button" data-mdb-toggle="dropdown"
+                        aria-expanded="false">
+                        <i class="flag-united-kingdom flag m-0"></i>
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="Dropdown">
+                        <li>
+                            <a class="dropdown-item" href="#"><i class="flag-united-kingdom flag"></i>English <i
+                                    class="fa fa-check text-success check ms-2"></i></a>
+                        </li>
+                        <li>
+                            <hr class="dropdown-divider" />
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="#"><i class="flag-poland flag"></i>Polski</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="#"><i class="flag-france flag"></i>Français</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="#"><i class="flag-spain flag"></i>Español</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="#"><i class="flag-russia flag"></i>Русский</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="#"><i class="flag-portugal flag"></i>Português</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </section>
         <section id="nav-area">
@@ -82,14 +85,22 @@
                     </div>
                     <div class="col-4">
                         <div class="left-area">
-                            <div class="search"><i class="fa-solid fa-magnifying-glass"></i></div>
-                            <div class="user"><i class="fa-regular fa-user"></i></div>
-                            <div><a><i class="fa-regular fa-heart"></i></a></div>
+                            <div class="search"><i class="fa-solid fa-magnifying-glass icon"></i></div>
+                            <div class="use"><i class="fa-regular fa-user icon"></i></div>
+                            <div><a><i class="fa-regular fa-heart icon"></i></a></div>
                             <div class="basket"><a><i class="fa-solid fa-basket-shopping"></i></a></div>
                         </div>
                     </div>
                 </div>
             </div>
+        </section>
+        <section id="responsive-nav-area">
+        <div class="hamburger"><i class="fa-solid fa-bars"></i></div>
+        <div class="left-area">
+            <div class="search"><i class="fa-solid fa-magnifying-glass icon"></i></div>
+            <div class="use"><i class="fa-regular fa-user icon"></i></div>
+            <div class="basket"><a><i class="fa-solid fa-basket-shopping"></i></a></div>
+        </div>
         </section>
         <section id="nav-down">
             <div class="container">
@@ -100,9 +111,6 @@
                         </a>
                         <a>
                             <li>Wedding Dresses</li>
-                        </a>
-                        <a>
-                            <li>Bijouterie</li>
                             <i class="fa-solid fa-chevron-down"></i>
 
                         </a>
@@ -115,11 +123,15 @@
                             <i class="fa-solid fa-chevron-down"></i>
                         </a>
                         <a>
+                            <li>About</li>
+                        </a>
+                        <a>
                             <li>Blog</li>
                         </a>
                         <a>
                             <li>Contact</li>
                         </a>
+                     
                     </ul>
                 </div>
             </div>
@@ -140,7 +152,7 @@
                             <a class=" shop btn-hover">SHOP NOW
                                 <i class="fa-solid fa-arrow-right-long"></i>
                             </a>
-                          
+
                         </div>
                     </div>
                     <div class="swiper-slide">
@@ -180,7 +192,7 @@
         <section id="introducing">
             <div class="container">
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-lg-6 col-sm-12">
                         <div class="introducing-text">
                             <div class="intro-text">
                                 <h4>Introducing</h4>
@@ -195,7 +207,7 @@
 
                         </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-lg-6 col-sm-12">
                         <div class="introducing-right">
                             <div class="introducing-image">
                                 <img src="./assets/images/image-2.jpg" alt="">
@@ -240,8 +252,7 @@
                             <div class="product-img">
                                 <a>
                                     <img src="./assets/images/dress1.jpg" class="primary-img" alt="Card image cap">
-                                    <img src="./assets/images/dresss1.jpg" class="secondary-img"
-                                        alt="Card image cap">
+                                    <img src="./assets/images/dresss1.jpg" class="secondary-img" alt="Card image cap">
                                 </a>
                             </div>
                             <div class="product-name">
@@ -259,8 +270,7 @@
                             <div class="product-img">
                                 <a>
                                     <img src="./assets/images/dress2.jpg" class="primary-img" alt="Card image cap">
-                                    <img src="./assets/images/dresss2.jpg" class="secondary-img"
-                                        alt="Card image cap">
+                                    <img src="./assets/images/dresss2.jpg" class="secondary-img" alt="Card image cap">
                                 </a>
                             </div>
                             <div class="product-name">
@@ -278,8 +288,7 @@
                             <div class="product-img">
                                 <a>
                                     <img src="./assets/images/dress3.jpg" class="primary-img" alt="Card image cap">
-                                    <img src="./assets/images/dresss3.jpg" class="secondary-img"
-                                        alt="Card image cap">
+                                    <img src="./assets/images/dresss3.jpg" class="secondary-img" alt="Card image cap">
                                 </a>
                             </div>
                             <div class="product-name">
@@ -297,8 +306,7 @@
                             <div class="product-img">
                                 <a>
                                     <img src="./assets/images/dress4.jfif" class="primary-img" alt="Card image cap">
-                                    <img src="./assets/images/dresss4.jfif" class="secondary-img"
-                                        alt="Card image cap">
+                                    <img src="./assets/images/dresss4.jfif" class="secondary-img" alt="Card image cap">
                                 </a>
                             </div>
                             <div class="product-name">
@@ -316,8 +324,7 @@
                             <div class="product-img">
                                 <a>
                                     <img src="./assets/images/dresss5.jpg" class="primary-img" alt="Card image cap">
-                                    <img src="./assets/images/dress5.jpg" class="secondary-img"
-                                        alt="Card image cap">
+                                    <img src="./assets/images/dress5.jpg" class="secondary-img" alt="Card image cap">
                                 </a>
                             </div>
                             <div class="product-name">
@@ -335,8 +342,7 @@
                             <div class="product-img">
                                 <a>
                                     <img src="./assets/images/dress7.jpeg" class="primary-img" alt="Card image cap">
-                                    <img src="./assets/images/dresss7.jpeg" class="secondary-img"
-                                        alt="Card image cap">
+                                    <img src="./assets/images/dresss7.jpeg" class="secondary-img" alt="Card image cap">
                                 </a>
                             </div>
                             <div class="product-name">
@@ -354,8 +360,7 @@
                             <div class="product-img">
                                 <a>
                                     <img src="./assets/images/dress6.jfif" class="primary-img" alt="Card image cap">
-                                    <img src="./assets/images/dresss6.jfif" class="secondary-img"
-                                        alt="Card image cap">
+                                    <img src="./assets/images/dresss6.jfif" class="secondary-img" alt="Card image cap">
                                 </a>
                             </div>
                             <div class="product-name">
@@ -373,8 +378,7 @@
                             <div class="product-img">
                                 <a>
                                     <img src="./assets/images/dress8.jpg" class="primary-img" alt="Card image cap">
-                                    <img src="./assets/images/dresss8.jpg" class="secondary-img"
-                                        alt="Card image cap">
+                                    <img src="./assets/images/dresss8.jpg" class="secondary-img" alt="Card image cap">
                                 </a>
                             </div>
                             <div class="product-name">
@@ -845,6 +849,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
     integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
     crossorigin="anonymous"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.3.1/mdb.min.js"></script>
 <script src="./assets/js/home.js"></script>
 
 </html>
