--- a/home.html
+++ b/home.html
@@ -81,7 +81,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4 d-lg-block col-sm-12 col-md-12 col-12">
+                    <div class="col-lg-4 col-sm-12 col-md-12 col-12">
                         <div class="logo">
                             <a href=""><img src="./assets/images/bridey-logo.jpg" alt=""></a>
                         </div>
@@ -100,27 +100,36 @@
         <div class="side-bar">
             <div class="close"> <span>Close</span></div>
             <ul>
-                <a><li class="activ">Home</li></a>
-                <a><li>Shop</li></a>
-                <a><li>About</li></a>
-                <a><li>Blog</li></a>
-                <a><li>Contact</li></a>
+                <a>
+                    <li class="activ">Home</li>
+                </a>
+                <a>
+                    <li>Shop</li>
+                </a>
+                <a>
+                    <li>About</li>
+                </a>
+                <a>
+                    <li>Blog</li>
+                </a>
+                <a>
+                    <li>Contact</li>
+                </a>
             </ul>
         </div>
-        <section id="responsive-nav-area">
-         
+        <section id="responsive-nav-area" class="d-lg-none">
             <div class="container">
                 <div class="row">
-                       <div class="col-md-2  col-sm-2 d-lg-none">
-                 <div class="hamburger"><i class="fa-solid fa-bars"></i></div>
-            </div>
-           <div class="col-md-10  col-sm-10 d-lg-none">
-            <div class="left-area">
-                <div class="search"><i class="fa-solid fa-magnifying-glass icon"></i></div>
-                <div class="use"><i class="fa-regular fa-user icon"></i></div>
-                <div class="basket"><a><i class="fa-solid fa-basket-shopping"></i></a></div>
-            </div>
-           </div> 
+                    <div class="col-md-2 col-2 d-lg-none">
+                        <div class="hamburger"><i class="fa-solid fa-bars"></i></div>
+                    </div>
+                    <div class="col-md-10 col-10 d-lg-none">
+                        <div class="left-area">
+                            <div class="search"><i class="fa-solid fa-magnifying-glass icon"></i></div>
+                            <div class="use"><i class="fa-regular fa-user icon"></i></div>
+                            <div class="basket"><a><i class="fa-solid fa-basket-shopping"></i></a></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -131,22 +140,18 @@
                         <a>
                             <li class="active">Home</li>
                         </a>
+                        <a href="about.html">
+                            <li>About</li>
+                        </a>
                         <a>
-                            <li>Wedding Dresses</li>
+                            <li>Shop</li>
                             <i class="fa-solid fa-chevron-down"></i>
 
                         </a>
-                        <a>
+                        <!-- <a>
                             <li>Accessories</li>
                             <i class="fa-solid fa-chevron-down"></i>
-                        </a>
-                        <a>
-                            <li>Page</li>
-                            <i class="fa-solid fa-chevron-down"></i>
-                        </a>
-                        <a>
-                            <li>About</li>
-                        </a>
+                        </a> -->
                         <a>
                             <li>Blog</li>
                         </a>
@@ -937,7 +942,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
     integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
     crossorigin="anonymous"></script>
-<!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.3.1/mdb.min.js"></script> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
     integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
