about page is ready

--- a/home.html
+++ b/home.html
@@ -31,6 +31,7 @@
 </head>
 
 <body>
+    <!-- Start Header -->
     <header>
         <div id="overlay" class="d-none"></div>
         <section id="nav-up">
@@ -164,6 +165,9 @@
             </div>
         </section>
     </header>
+    <!-- End header -->
+
+    <!-- Start Main -->
     <main>
         <section id="slider">
             <div class="swiper mySwiper">
@@ -590,7 +594,6 @@
             </div>
 
         </section>
-
         <section id="latest-news">
             <div class="container">
                 <div class="header-background">
@@ -806,7 +809,6 @@
             </div>
 
         </section>
-
         <section id="footer-top">
             <div class="container">
                 <div class="row">
@@ -841,6 +843,12 @@
                 </div>
             </div>
         </section>
+
+    </main>
+    <!-- End Main -->
+
+    <!-- Start Footer -->
+    <footer>
         <section id="footer">
             <div class="container">
                 <div class="row">
@@ -924,28 +932,22 @@
                     Copyright © 2020 All Rights Reserved. <span>Bridey.</span> </div>
             </div>
         </section>
-    </main>
+    </footer>
+    <!-- End Footer -->
+
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
+        integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+        integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
+        integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script type="text/javascript" src="./assets/slicky/slick-1.8.1/slick/slick.min.js"></script>
+    <script src="./assets/js/home.js"></script>
 </body>
-
-
-
-
-
-
-
-
-
-<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
-    integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
-    integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
-    crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
-    integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script type="text/javascript" src="./assets/slicky/slick-1.8.1/slick/slick.min.js"></script>
-<script src="./assets/js/home.js"></script>
 
 </html>
