blog page is ready

--- a/home.html
+++ b/home.html
@@ -138,25 +138,25 @@
             <div class="container">
                 <div class="d-lg-block d-none">
                     <ul class="top-menu">
-                        <a>
+                        <a href="home.html">
                             <li class="active">Home</li>
                         </a>
                         <a href="about.html">
                             <li>About</li>
                         </a>
-                        <a>
+                        <a href="shop.html">
                             <li>Shop</li>
                             <i class="fa-solid fa-chevron-down"></i>
-
                         </a>
                         <!-- <a>
-                            <li>Accessories</li>
-                            <i class="fa-solid fa-chevron-down"></i>
-                        </a> -->
-                        <a>
+                        <li>Accessories</li>
+                        <i class="fa-solid fa-chevron-down"></i>
+                    </a> -->
+
+                        <a href="blog.html">
                             <li>Blog</li>
                         </a>
-                        <a>
+                        <a href="contact.html">
                             <li>Contact</li>
                         </a>
 
