--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.3.1/mdb.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -131,22 +132,22 @@
                         <a href="home.html">
                             <li class="active">Home</li>
                         </a>
-                        <a>
+                        <a href="about.html">
                             <li>About</li>
                         </a>
-                        <a>
+                        <a href="shop.html">
                             <li>Shop</li>
                             <i class="fa-solid fa-chevron-down"></i>
                         </a>
                         <!-- <a>
-                            <li>Accessories</li>
-                            <i class="fa-solid fa-chevron-down"></i>
-                        </a> -->
+                        <li>Accessories</li>
+                        <i class="fa-solid fa-chevron-down"></i>
+                    </a> -->
 
-                        <a>
+                        <a href="blog.html">
                             <li>Blog</li>
                         </a>
-                        <a>
+                        <a href="contact.html">
                             <li>Contact</li>
                         </a>
 
