shop page is ready

--- a/home.html
+++ b/home.html
@@ -280,6 +280,7 @@
                 <div class="row">
                     <div class="col-lg-3 col-sm-12 col-md-6">
                         <div class="cart">
+                            <div class="new">New</div>
                             <div class="product-img">
                                 <a>
                                     <img src="./assets/images/dress1.jpg" class="primary-img" alt="Card image cap">
@@ -293,11 +294,20 @@
                             <div class="product-price">
                                 <p class="price">$<span class="price">23.90</span></p>
                             </div>
+                            <div class="functional-buttons">
+                                <ul>
+                                    <li><a><i class="fa-solid fa-eye"></i></a></li>
+                                    <li><a><i class="fa-regular fa-heart"></i></a></li>
+                                    <li><a><i class="fa-solid fa-basket-shopping"></i></a></li>
+
+                                </ul>
+                            </div>
                         </div>
 
                     </div>
                     <div class="col-lg-3 col-sm-12 col-md-6">
                         <div class="cart">
+                            <div class="new">New</div>
                             <div class="product-img">
                                 <a>
                                     <img src="./assets/images/dress2.jpg" class="primary-img" alt="Card image cap">
@@ -311,11 +321,20 @@
                             <div class="product-price">
                                 <p class="price">$<span class="price">35.90</span></p>
                             </div>
+                            <div class="functional-buttons">
+                                <ul>
+                                    <li><a><i class="fa-solid fa-eye"></i></a></li>
+                                    <li><a><i class="fa-regular fa-heart"></i></a></li>
+                                    <li><a><i class="fa-solid fa-basket-shopping"></i></a></li>
+
+                                </ul>
+                            </div>
                         </div>
 
                     </div>
                     <div class="col-lg-3 col-sm-12 col-md-6">
                         <div class="cart">
+                            <div class="new">New</div>
                             <div class="product-img">
                                 <a>
                                     <img src="./assets/images/dress3.jpg" class="primary-img" alt="Card image cap">
@@ -329,11 +348,20 @@
                             <div class="product-price">
                                 <p class="price">$<span class="price">29.90</span></p>
                             </div>
+                            <div class="functional-buttons">
+                                <ul>
+                                    <li><a><i class="fa-solid fa-eye"></i></a></li>
+                                    <li><a><i class="fa-regular fa-heart"></i></a></li>
+                                    <li><a><i class="fa-solid fa-basket-shopping"></i></a></li>
+
+                                </ul>
+                            </div>
                         </div>
 
                     </div>
                     <div class="col-lg-3 col-sm-12 col-md-6">
                         <div class="cart">
+                            <div class="new">New</div>
                             <div class="product-img">
                                 <a>
                                     <img src="./assets/images/dress4.jfif" class="primary-img" alt="Card image cap">
@@ -347,11 +375,20 @@
                             <div class="product-price">
                                 <p class="price">$<span class="price">23.90</span></p>
                             </div>
+                            <div class="functional-buttons">
+                                <ul>
+                                    <li><a><i class="fa-solid fa-eye"></i></a></li>
+                                    <li><a><i class="fa-regular fa-heart"></i></a></li>
+                                    <li><a><i class="fa-solid fa-basket-shopping"></i></a></li>
+
+                                </ul>
+                            </div>
                         </div>
 
                     </div>
                     <div class="col-lg-3 col-sm-12 col-md-6">
                         <div class="cart">
+                            <div class="new">New</div>
                             <div class="product-img">
                                 <a>
                                     <img src="./assets/images/dresss5.jpg" class="primary-img" alt="Card image cap">
@@ -365,11 +402,20 @@
                             <div class="product-price">
                                 <p class="price">$<span class="price">23.90</span></p>
                             </div>
+                            <div class="functional-buttons">
+                                <ul>
+                                    <li><a><i class="fa-solid fa-eye"></i></a></li>
+                                    <li><a><i class="fa-regular fa-heart"></i></a></li>
+                                    <li><a><i class="fa-solid fa-basket-shopping"></i></a></li>
+
+                                </ul>
+                            </div>
                         </div>
 
                     </div>
                     <div class="col-lg-3 col-sm-12 col-md-6">
                         <div class="cart">
+                            <div class="new">New</div>
                             <div class="product-img">
                                 <a>
                                     <img src="./assets/images/dress7.jpeg" class="primary-img" alt="Card image cap">
@@ -383,11 +429,20 @@
                             <div class="product-price">
                                 <p class="price">$<span class="price">23.90</span></p>
                             </div>
+                            <div class="functional-buttons">
+                                <ul>
+                                    <li><a><i class="fa-solid fa-eye"></i></a></li>
+                                    <li><a><i class="fa-regular fa-heart"></i></a></li>
+                                    <li><a><i class="fa-solid fa-basket-shopping"></i></a></li>
+
+                                </ul>
+                            </div>
                         </div>
 
                     </div>
                     <div class="col-lg-3 col-sm-12 col-md-6">
                         <div class="cart">
+                            <div class="new">New</div>
                             <div class="product-img">
                                 <a>
                                     <img src="./assets/images/dress6.jfif" class="primary-img" alt="Card image cap">
@@ -401,11 +456,20 @@
                             <div class="product-price">
                                 <p class="price">$<span class="price">23.90</span></p>
                             </div>
+                            <div class="functional-buttons">
+                                <ul>
+                                    <li><a><i class="fa-solid fa-eye"></i></a></li>
+                                    <li><a><i class="fa-regular fa-heart"></i></a></li>
+                                    <li><a><i class="fa-solid fa-basket-shopping"></i></a></li>
+
+                                </ul>
+                            </div>
                         </div>
 
                     </div>
                     <div class="col-lg-3 col-sm-12 col-md-6">
                         <div class="cart">
+                            <div class="new">New</div>
                             <div class="product-img">
                                 <a>
                                     <img src="./assets/images/dress8.jpg" class="primary-img" alt="Card image cap">
@@ -418,6 +482,14 @@
                             </div>
                             <div class="product-price">
                                 <p class="price">$<span class="price">23.90</span></p>
+                            </div>
+                            <div class="functional-buttons">
+                                <ul>
+                                    <li><a><i class="fa-solid fa-eye"></i></a></li>
+                                    <li><a><i class="fa-regular fa-heart"></i></a></li>
+                                    <li><a><i class="fa-solid fa-basket-shopping"></i></a></li>
+
+                                </ul>
                             </div>
                         </div>
 
