wishlist and basket page are ready

--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
                         </div>
                     </div>
                     <div class="col-4  d-lg-block d-none">
-                        <div class="left-area">
+                        <div class="right-area">
                             <div class="search"><i class="fa-solid fa-magnifying-glass icon"></i></div>
                             <div class="use"><i class="fa-regular fa-user icon"></i></div>
                             <div><a><i class="fa-regular fa-heart icon"></i></a></div>
@@ -137,13 +137,7 @@
                         </a>
                         <a href="shop.html">
                             <li>Shop</li>
-                            <i class="fa-solid fa-chevron-down"></i>
                         </a>
-                        <!-- <a>
-                        <li>Accessories</li>
-                        <i class="fa-solid fa-chevron-down"></i>
-                    </a> -->
-
                         <a href="blog.html">
                             <li>Blog</li>
                         </a>
@@ -328,9 +322,6 @@
                                     </div>
                                     <div class="title slide-color">
                                         Kelli Hansen
-                                    </div>
-                                    <div class="sub-title slide-color">
-                                        Los Angeles, USA
                                     </div>
                                 </div>
 
