--- a/home.html
+++ b/home.html
@@ -11,9 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.3.1/mdb.min.css" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Qwitcher+Grypen&display=swap" rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Kaushan+Script&family=Marck+Script&display=swap"
@@ -88,11 +86,11 @@
                         </div>
                     </div>
                     <div class="col-4  d-lg-block d-none">
-                        <div class="left-area">
+                        <div class="right-area">
                             <div class="search"><i class="fa-solid fa-magnifying-glass icon"></i></div>
                             <div class="use"><i class="fa-regular fa-user icon"></i></div>
-                            <div><a><i class="fa-regular fa-heart icon"></i></a></div>
-                            <div class="basket"><a><i class="fa-solid fa-basket-shopping"></i></a></div>
+                            <div><a href="wishlist.html"><i class="fa-regular fa-heart icon"></i></a></div>
+                            <div class="basket"><a href="basket.html"><i class="fa-solid fa-basket-shopping"></i></a></div>
                         </div>
                     </div>
                 </div>
@@ -125,7 +123,7 @@
                         <div class="hamburger"><i class="fa-solid fa-bars"></i></div>
                     </div>
                     <div class="col-md-10 col-10 d-lg-none">
-                        <div class="left-area">
+                        <div class="right-area">
                             <div class="search"><i class="fa-solid fa-magnifying-glass icon"></i></div>
                             <div class="use"><i class="fa-regular fa-user icon"></i></div>
                             <div class="basket"><a><i class="fa-solid fa-basket-shopping"></i></a></div>
@@ -146,13 +144,7 @@
                         </a>
                         <a href="shop.html">
                             <li>Shop</li>
-                            <i class="fa-solid fa-chevron-down"></i>
                         </a>
-                        <!-- <a>
-                        <li>Accessories</li>
-                        <i class="fa-solid fa-chevron-down"></i>
-                    </a> -->
-
                         <a href="blog.html">
                             <li>Blog</li>
                         </a>
@@ -599,9 +591,6 @@
                                     <div class="title">
                                         Kelli Hansen
                                     </div>
-                                    <div class="sub-title">
-                                        Los Angeles, USA
-                                    </div>
                                 </div>
 
 
@@ -680,9 +669,9 @@
             <div class="container">
                 <div class="row">
                     <div class="blog-slider">
-
                         <div class="col-4">
                             <div class="blog">
+                                <img class="primary-img" src="./assets/images/bl.jpg">
                                 <div class="blog-content">
                                     <div class="blog-author">
                                         <span class="blogg">Blog:<span></span></span>
