--- a/blog.html
+++ b/blog.html
@@ -72,7 +72,7 @@
                         </div>
                     </div>
                     <div class="col-4  d-lg-block d-none">
-                        <div class="left-area">
+                        <div class="right-area">
                             <div class="search"><i class="fa-solid fa-magnifying-glass icon"></i></div>
                             <div class="use"><i class="fa-regular fa-user icon"></i></div>
                             <div><a><i class="fa-regular fa-heart icon"></i></a></div>
@@ -131,13 +131,7 @@
                         </a>
                         <a href="shop.html">
                             <li>Shop</li>
-                            <i class="fa-solid fa-chevron-down"></i>
                         </a>
-                        <!-- <a>
-                        <li>Accessories</li>
-                        <i class="fa-solid fa-chevron-down"></i>
-                    </a> -->
-
                         <a href="blog.html">
                             <li>Blog</li>
                         </a>
