register and login page are ready

--- a/about.html
+++ b/about.html
@@ -80,10 +80,17 @@
                     <div class="col-4  d-lg-block d-none">
                         <div class="right-area">
                             <div class="search"><i class="fa-solid fa-magnifying-glass icon"></i></div>
-                            <div class="use"><i class="fa-regular fa-user icon"></i></div>
-                            <div><a><i class="fa-regular fa-heart icon"></i></a></div>
-                            <div class="basket"><a><i class="fa-solid fa-basket-shopping"></i></a></div>
+                            <div><i class="fa-regular fa-user icon"></i></div>
+                            <div><a href="wishlist.html"><i class="fa-regular fa-heart icon"></i></a></div>
+                            <div class="basket"><a href="basket.html"><i class="fa-solid fa-basket-shopping"></i></a></div>
                         </div>
+                        <div class="login-register d-none">
+                            <ul>
+                              <li><a href="login.html">Login</a></li>
+                              <li><a href="register.html">Register</a></li>
+  
+                            </ul>
+                          </div>
                     </div>
                 </div>
             </div>
@@ -118,8 +125,8 @@
                     <div class="col-md-10 col-10 d-lg-none">
                         <div class="left-area">
                             <div class="search"><i class="fa-solid fa-magnifying-glass icon"></i></div>
-                            <div class="use"><i class="fa-regular fa-user icon"></i></div>
-                            <div class="basket"><a><i class="fa-solid fa-basket-shopping"></i></a></div>
+                            <div><i class="fa-regular fa-user icon"></i></div>
+                            <div class="basket"><a href="basket.html"><i class="fa-solid fa-basket-shopping"></i></a></div>
                         </div>
                     </div>
                 </div>
@@ -520,6 +527,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
         integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="./assets/js/common.js"></script>
     <script src="./assets/js/about.js"></script>
 </body>
 
