--- a/basket.html
+++ b/basket.html
@@ -74,10 +74,17 @@
                     <div class="col-4  d-lg-block d-none">
                         <div class="right-area">
                             <div class="search"><i class="fa-solid fa-magnifying-glass icon"></i></div>
-                            <div class="use"><i class="fa-regular fa-user icon"></i></div>
-                            <div><a><i class="fa-regular fa-heart icon"></i></a></div>
-                            <div class="basket"><a><i class="fa-solid fa-basket-shopping"></i></a></div>
+                            <div><i class="fa-regular fa-user icon"></i></div>
+                            <div><a href="wishlist.html"><i class="fa-regular fa-heart icon"></i></a></div>
+                            <div class="basket"><a href="basket.html"><i class="fa-solid fa-basket-shopping"></i></a></div>
                         </div>
+                        <div class="login-register d-none">
+                            <ul>
+                              <li><a href="login.html">Login</a></li>
+                              <li><a href="register.html">Register</a></li>
+  
+                            </ul>
+                          </div>
                     </div>
                 </div>
             </div>
@@ -111,8 +118,8 @@
                     <div class="col-md-10 col-10 d-lg-none">
                         <div class="right-area">
                             <div class="search"><i class="fa-solid fa-magnifying-glass icon"></i></div>
-                            <div class="use"><i class="fa-regular fa-user icon"></i></div>
-                            <div class="basket"><a><i class="fa-solid fa-basket-shopping"></i></a></div>
+                            <div><i class="fa-regular fa-user icon"></i></div>
+                            <div class="basket"><a href="basket.html"><i class="fa-solid fa-basket-shopping"></i></a></div>
                         </div>
                     </div>
                 </div>
@@ -146,7 +153,7 @@
     <!-- End header -->
     <!-- Main Start -->
     <main>
-        <section id="products">
+        <section id="basket-table">
             <div class="container">
                 <div class="table-area">
                            <div class="table-products">
@@ -167,13 +174,13 @@
                                     <img src="./assets/images/dress1.jpg" alt="">
                                 </td>
                                 <td>Lotti Midi Dress</td>
-                                <td>$ 149.00</td>
+                                <td><span>$</span> 149.00</td>
                                 <td>
                                     <button class="minus"><i class="fa-solid fa-minus"></i></button>
                                     <input value="1" type="text" disabled="">
                                     <button class="plus"><i class="fa-solid fa-plus "></i></button>
                                 </td>
-                                <td class="price"> $ 149.00</td>
+                                <td class="price"><span>$</span> 149.00</td>
                                 <td><i class="fa-solid fa-x delete-icon"></i></td>
                             </tr>
                         </tbody>
@@ -278,6 +285,14 @@
             </section>
         </footer>
         <!-- End Footer -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+        integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
+        integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="./assets/js/common.js"></script>
+    <script src="./assets/js/basket.js"></script>
 </body>
 
 </html>
