--- a/productDetail.html
+++ b/productDetail.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./assets/slicky/slick-1.8.1/slick/slick.css" />
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick-theme.css'>
     <link rel="stylesheet" href="./assets/scss/style.css">
@@ -79,9 +79,17 @@
                     <div class="col-4  d-lg-block d-none">
                         <div class="right-area">
                             <div class="search"><i class="fa-solid fa-magnifying-glass icon"></i></div>
-                            <div class="use"><i class="fa-regular fa-user icon"></i></div>
-                            <div><a><i class="fa-regular fa-heart icon"></i></a></div>
-                            <div class="basket"><a><i class="fa-solid fa-basket-shopping"></i></a></div>
+                            <div><i class="fa-regular fa-user icon"></i></div>
+                            <div><a href="wishlist.html"><i class="fa-regular fa-heart icon"></i></a></div>
+                            <div class="basket"><a href="basket.html"><i class="fa-solid fa-basket-shopping"></i></a>
+                            </div>
+                        </div>
+                        <div class="login-register d-none">
+                            <ul>
+                                <li><a href="login.html">Login</a></li>
+                                <li><a href="register.html">Register</a></li>
+
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -116,8 +124,9 @@
                     <div class="col-md-10 col-10 d-lg-none">
                         <div class="left-area">
                             <div class="search"><i class="fa-solid fa-magnifying-glass icon"></i></div>
-                            <div class="use"><i class="fa-regular fa-user icon"></i></div>
-                            <div class="basket"><a><i class="fa-solid fa-basket-shopping"></i></a></div>
+                            <div><i class="fa-regular fa-user icon"></i></div>
+                            <div class="basket"><a href="basket.html"><i class="fa-solid fa-basket-shopping"></i></a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -187,7 +196,8 @@
 
                             </div>
                             <div class="prod-info_">
-                                <h1 class="prod-name">Princess Illusion Court Train Lace Tulle Wedding Dress With Sequins</h1>
+                                <h1 class="prod-name">Princess Illusion Court Train Lace Tulle Wedding Dress With
+                                    Sequins</h1>
                                 <div class="product-rate">
                                     <i class="fa-solid fa-star" style="color: #b97a56;"></i>
                                     <i class="fa-solid fa-star" style="color: #b97a56;"></i>
@@ -196,7 +206,7 @@
                                     <i class="fa-regular fa-star" style="color: #b97a56;"></i>
                                     <div class="count-review"><span>(<span>1</span>customer review)</span></div>
                                 </div>
-                                
+
                                 <div>
                                     <h1 class="category">
                                         Category:
@@ -501,6 +511,7 @@
         integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src='https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js'></script>
+    <script src="./assets/js/common.js"></script>
     <script src="./assets/js/productDetail.js"></script>
 </body>
 
