--- a/shop.html
+++ b/shop.html
@@ -77,10 +77,16 @@
                     <div class="col-4  d-lg-block d-none">
                         <div class="right-area">
                             <div class="search"><i class="fa-solid fa-magnifying-glass icon"></i></div>
-                            <div class="use"><i class="fa-regular fa-user icon"></i></div>
-                            <div><a><i class="fa-regular fa-heart icon"></i></a></div>
-                            <div class="basket"><a><i class="fa-solid fa-basket-shopping"></i></a></div>
+                            <div><i class="fa-regular fa-user icon"></i></div>
+                            <div><a href="wishlist.html"><i class="fa-regular fa-heart icon"></i></a></div>
+                            <div class="basket"><a href="basket.html"><i class="fa-solid fa-basket-shopping"></i></a></div>
                         </div>
+                        <div class="login-register d-none">
+                            <ul>
+                              <li><a href="login.html">Login</a></li>
+                              <li><a href="register.html">Register</a></li>
+                            </ul>
+                          </div>
                     </div>
                 </div>
             </div>
@@ -114,8 +120,8 @@
                     <div class="col-md-10 col-10 d-lg-none">
                         <div class="left-area">
                             <div class="search"><i class="fa-solid fa-magnifying-glass icon"></i></div>
-                            <div class="use"><i class="fa-regular fa-user icon"></i></div>
-                            <div class="basket"><a><i class="fa-solid fa-basket-shopping"></i></a></div>
+                            <div><i class="fa-regular fa-user icon"></i></div>
+                            <div class="basket"><a href="basket.html"><i class="fa-solid fa-basket-shopping"></i></a></div>
                         </div>
                     </div>
                 </div>
@@ -231,7 +237,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="bijuterias">
+                            <div class="compositions">
                                 <h5>Composition</h5>
                                 <div class="widget-title-holder">
                                     <ul>
@@ -493,6 +499,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
         integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
         crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
+        integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="./assets/js/common.js"></script>
     <script src="./assets/js/shop.js"></script>
 </body>
 
