--- a/home.html
+++ b/home.html
@@ -95,7 +95,7 @@
                         </div>
                         <div class="login-register d-none">
                           <ul>
-                            <li><a href="login.html">Login</a></li>
+                            <li><a href="login.html">Login</a></li><span>/</span>
                             <li><a href="register.html">Register</a></li>
 
                           </ul>
