--- a/login.html
+++ b/login.html
@@ -74,7 +74,7 @@
                     <div class="col-4  d-lg-block d-none">
                         <div class="right-area">
                             <div class="search"><i class="fa-solid fa-magnifying-glass icon"></i></div>
-                            <div><i class="fa-regular fa-user icon"></i></div>
+                            <div><i class="fa-regular fa-user icon user-icon"></i></div>
                             <div><a href="wishlist.html"><i class="fa-regular fa-heart icon"></i></a></div>
                             <div class="basket"><a href="basket.html"><i class="fa-solid fa-basket-shopping"></i></a>
                             </div>
@@ -167,7 +167,7 @@
                 </ul>
             </div>
         </section>
-    <section id="register">
+    <section id="login">
         <form class="form-login">
             <div class="form-login-wrap">
                 <h2 class="login-form-title">Login</h2>
@@ -178,7 +178,11 @@
                     <input type="password" class="password"><i class="fa-regular fa-eye"></i>
                 </div>
                 <button type="submit">Log in</button>
-
+                <div class="login-bottom">
+                    <input type="checkbox"><span>Remember me</span>
+                    <p><a>Lost your password?</a></p>
+                </div>
+               
             </div>
         </form>
     </section>
