--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=WindSong:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Marcellus&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -80,17 +81,18 @@
                     <div class="col-4  d-lg-block d-none">
                         <div class="right-area">
                             <div class="search"><i class="fa-solid fa-magnifying-glass icon"></i></div>
-                            <div><i class="fa-regular fa-user icon"></i></div>
+                            <div><i class="fa-regular fa-user icon user-icon"></i></div>
                             <div><a href="wishlist.html"><i class="fa-regular fa-heart icon"></i></a></div>
-                            <div class="basket"><a href="basket.html"><i class="fa-solid fa-basket-shopping"></i></a></div>
+                            <div class="basket"><a href="basket.html"><i class="fa-solid fa-basket-shopping"></i></a>
+                            </div>
                         </div>
                         <div class="login-register d-none">
                             <ul>
-                              <li><a href="login.html">Login</a></li>
-                              <li><a href="register.html">Register</a></li>
-  
+                                <li><a href="login.html">Login</a></li>
+                                <li><a href="register.html">Register</a></li>
+
                             </ul>
-                          </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -126,7 +128,8 @@
                         <div class="left-area">
                             <div class="search"><i class="fa-solid fa-magnifying-glass icon"></i></div>
                             <div><i class="fa-regular fa-user icon"></i></div>
-                            <div class="basket"><a href="basket.html"><i class="fa-solid fa-basket-shopping"></i></a></div>
+                            <div class="basket"><a href="basket.html"><i class="fa-solid fa-basket-shopping"></i></a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -225,8 +228,9 @@
         <section id="title_block">
             <div class="container">
                 <div class="sub-title">
-                    <h4>What we do </h4>
-                    <span>Bridal Industry Transparency</span>
+                    <p>What we do</p>
+                    <h2>Bridal Industry<br> Transparency</h2>
+                    <img src="./assets/images/decor.png">
                 </div>
             </div>
 
@@ -393,7 +397,7 @@
                 <div class="swiper-pagination about-pagination"></div>
             </div>
         </section>
-        <section id="footer-top">
+        <section id="footer-top-about">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-3 col-sm-12 col-12">
@@ -527,8 +531,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
         integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="./assets/js/common.js"></script>
     <script src="./assets/js/about.js"></script>
+    <script src="./assets/js/common.js"></script>
 </body>
 
 
