--- a/register.html
+++ b/register.html
@@ -74,7 +74,7 @@
                     <div class="col-4  d-lg-block d-none">
                         <div class="right-area">
                             <div class="search"><i class="fa-solid fa-magnifying-glass icon"></i></div>
-                            <div><i class="fa-regular fa-user icon"></i></div>
+                            <div><i class="fa-regular fa-user icon user-icon"></i></div>
                             <div><a href="wishlist.html"><i class="fa-regular fa-heart icon"></i></a></div>
                             <div class="basket"><a href="basket.html"><i class="fa-solid fa-basket-shopping"></i></a>
                             </div>
